--- a/.github/workflows/Pull Request Pipeline.yml
+++ b/.github/workflows/Pull Request Pipeline.yml
@@ -1,4 +1,4 @@
-name: Pull Request Pipeline
+name: pruebas y construccion 
 
 on:
   pull_request:
@@ -6,36 +6,29 @@ on:
       - main
 
 jobs:
-  build_and_test: 
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Install unzip
-      run: sudo apt-get install unzip
+      - name: Unzip application files
+        run: unzip api-codigo.zip -d .
 
-    - name: Unzip application code
-      run: unzip path/to/your/application.zip -d ./application
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+      - name: Build with Maven
+        run: ./mvnw verify
 
-    - name: Install dependencies
-      run: |
-        cd ./application
-        npm install
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: application-jar
+          path: |
+            **/target/*.jar
 
-    - name: Build the project
-      run: |
-        cd ./application
-        npm run build
-
-    - name: Run tests
-      run: |
-        cd ./application
-        npm test
 
