--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -21,6 +21,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Unzip application files
+      run: unzip api-codigo.zip -d .
+
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
@@ -37,3 +40,4 @@ jobs:
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
+
