--- a/.github/workflows/Pull Request Pipeline.yml
+++ b/.github/workflows/Pull Request Pipeline.yml
@@ -26,7 +26,7 @@ jobs:
          settings-path: ${{ github.workspace }} # location for the settings.xml file
 
       - name: Build with Maven
-        run: ./mvnw verify
+        run: ./mvnw verify --file pom.xml
 
       - name: Archive artifacts
         uses: actions/upload-artifact@v3
