--- a/.github/workflows/Prueba1.yml
+++ b/.github/workflows/Prueba1.yml
@@ -27,7 +27,7 @@ jobs:
       run: unzip api-codigo.zip -d .
       
     - name: Build with Maven
-      run: mvnw -B package --file pom.xml
+      run: mvn -B package --file pom.xml
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.3.3      
