--- a/.github/workflows/Prueba1.yml
+++ b/.github/workflows/Prueba1.yml
@@ -24,7 +24,7 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
       
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -X package --file pom.xml
       
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.3.3      
